# hfst

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  ChangeLog  MANIFEST.in  Makefile.am  NEWS  README.rst  autogen.sh  build-wasm-dev-container.sh  build-wasm.sh  configure.ac  pyproject.toml  setup.py
back-ends/foma/: Makefile.am  README  apply.c  cmatrix.l  coaccessible.c  constructions.c  determinize.c  dynarray.c  flags.c  foma.c  foma.h  fomalib.h  fomalibconf.h  iface.c  interface.l  io.c  lex.cmatrix.c  lex.interface.c  lex.lexc.c  lex.yy.c  lexc.l  lexcread.c  mem.c  minimize.c  regex.c  regex.h  regex.l  regex.y  rewrite.c  sigma.c  spelling.c  stringhash.c  structures.c  topsort.c  trie.c  utf8.c
back-ends/foma/cpp-version/: Makefile.am  apply.cc  coaccessible.cc  constructions.cc  determinize.cc  dynarray.cc  flags.cc  foma.cc  fomalib.h  iface.cc  lex.cmatrix.cc  lex.interface.cc  lex.lexc.cc  lex.yy.cc  lexcread.cc  mem.cc  minimize.cc  regex.cc  rewrite.cc  sigma.cc  spelling.cc  stack.cc  stringhash.cc  structures.cc  topsort.cc  trie.cc  utf8.cc
libhfst/: Makefile.am  hfst.pc.in  hfst_c.pc.in
libhfst/src/: EmscriptenBindings.cc  HarmonizeUnknownAndIdentitySymbols.cc  HarmonizeUnknownAndIdentitySymbols.h  HfstDataTypes.cc  HfstDataTypes.h  HfstExceptionDefs.cc  HfstExceptionDefs.h  HfstInputStream.cc  HfstInputStream.h  HfstOutputStream.cc  HfstOutputStream.h  HfstPrintDot.cc  HfstPrintDot.h  HfstPrintPCKimmo.cc  HfstRules.cc  HfstStrings2FstTokenizer.cc  HfstSymbolDefs.h  HfstTokenizer.cc  HfstTokenizer.h  HfstTransducer.cc  HfstTransducer.h  HfstXeroxRules.cc  HfstXeroxRulesTest.cc  Makefile.am  hfst-string-conversions.cc  hfst-string-conversions.h  hfst.hpp.in
libhfst/src/c/: Makefile.am  libhfst_c.cpp  libhfst_c.h
libhfst/src/implementations/: ConvertFomaTransducer.cc  ConvertLogWeightTransducer.cc  ConvertOlTransducer.cc  ConvertSfstTransducer.cc  ConvertTransducerFormat.cc  ConvertTransducerFormat.h  ConvertTropicalWeightTransducer.cc  ConvertXfsmTransducer.cc  FomaTransducer.cc  FomaTransducer.h  HfstBasicTransducer.cc  HfstBasicTransducer.h  HfstIterableTransducer.cc  HfstIterableTransducer.h  HfstOlTransducer.cc  HfstTransition.cc  HfstTransition.h  HfstTransitionGraph.h  HfstTropicalTransducerTransitionData.cc  HfstTropicalTransducerTransitionData.h  LogWeightTransducer.cc  LogWeightTransducer.h  Makefile.am  SfstTransducer.cc  SfstTransducer.h  TropicalWeightTransducer.cc  TropicalWeightTransducer.h  XfsmTransducer.cc  read_sfst.cc
libhfst/src/implementations/compose_intersect/: ComposeIntersectFst.cc  ComposeIntersectFst.h  ComposeIntersectLexicon.cc  ComposeIntersectLexicon.h  ComposeIntersectRule.cc  ComposeIntersectRule.h  ComposeIntersectUtilities.cc
libhfst/src/implementations/optimized-lookup/: convert.cc  convert.h  pmatch.cc  pmatch.h  pmatch_tokenize.cc  pmatch_tokenize.h  transducer.cc  transducer.h
libhfst/src/parsers/: HfstTwolcDefs.h  LexcCompiler.cc  LexcCompiler.h  Makefile.am  PmatchCompiler.cc  PmatchCompiler.h  SfstAlphabet.cc  SfstAlphabet.h  SfstBasic.cc  SfstBasic.h  SfstCompiler.cc  SfstCompiler.h  SfstUtf8.cc  SfstUtf8.h  TwolcCompiler.cc  TwolcCompiler.h  XfstCompiler.cc  XfstCompiler.h  XreCompiler.cc  XreCompiler.h  common_globals.h  grammar_defs.h  htwolcpre1-lexer.ll  htwolcpre1-parser.yy  htwolcpre2-lexer.ll  htwolcpre2-parser.yy  htwolcpre3-lexer.ll  htwolcpre3-parser.yy  lexc-lexer.ll  lexc-parser.yy  lexc-utils.cc  lexc-utils.h  pmatch_lex.ll  pmatch_parse.yy  pmatch_utils.cc  pmatch_utils.h  sfst-compiler.yy  sfst-scanner.ll  xfst-lexer.ll  xfst-parser.yy  (+5 more)
libhfst/src/parsers/alphabet_src/: Alphabet.cc  Alphabet.h
libhfst/src/parsers/commandline_src/: CommandLine.cc  CommandLine.h
libhfst/src/parsers/io_src/: InputReader.cc  InputReader.h  input_defs.h
libhfst/src/parsers/rule_src/: ConflictResolvingLeftArrowRule.cc  ConflictResolvingLeftArrowRule.h  ConflictResolvingRightArrowRule.cc  ConflictResolvingRightArrowRule.h  LeftArrowRule.cc  LeftArrowRule.h  LeftArrowRuleContainer.cc  LeftArrowRuleContainer.h  LeftRestrictionArrowRule.cc  LeftRestrictionArrowRule.h  OtherSymbolTransducer.cc  OtherSymbolTransducer.h  RightArrowRule.cc  RightArrowRule.h  RightArrowRuleContainer.cc  RightArrowRuleContainer.h  Rule.cc  Rule.h  RuleContainer.cc  RuleContainer.h  TwolCGrammar.cc  TwolCGrammar.h
libhfst/src/parsers/string_src/: string_manipulation.cc  string_manipulation.h
libhfst/src/parsers/variable_src/: ConstContainerIterator.h  (+16 more)
libhfst/wasm-demo/: build-wasm-dev-container.sh  clean-wasm.sh  french.hfst.ol  index.html  lookup.html  tokenize.html
python/: Makefile.am  README  cibw-before-all-linux.sh  cibw-before-all-macos.sh  cibw-before-build-pyodide.sh  docstrings.i  generate-parsers.sh  hfst_extensions.cpp  hfst_lexc_extensions.cpp  hfst_lookup_extensions.cpp  hfst_pmatch_extensions.cpp  hfst_pmatch_tokenize_extensions.cpp  hfst_prolog_extensions.cpp  hfst_rules_extensions.cpp  hfst_sfst_extensions.cpp  hfst_xfst_extensions.cpp  libhfst.i  libhfst_dev.i  setup.py
python/doc/hfst/: __init__.py
python/hfst/: __init__.py
python/hfst_dev/: __init__.py
python/hfst_dev/exceptions/: __init__.py
python/hfst_dev/sfst_rules/: __init__.py
python/hfst_dev/xerox_rules/: __init__.py
python/macos-compat/ext/: hash_map  hash_set
python/pypi/: MANIFEST.in  README  README.rst  build_macos_wheels.sh  build_manylinux_wheels.sh  build_manylinux_wheels_sub.sh  clean.sh  copy-files-win.sh  copy-files.sh  setup.py  test_builds.sh
python/test/: Makefile.am  test.sh  test2.py  test7.py  test_att_reader.py  test_dir_hfst.py  test_dir_hfst_exceptions.py  test_dir_hfst_sfst_rules.py  test_examples.py  test_exceptions.py  test_hfst.py  test_lookup.py  test_pmatch.py  test_prolog.py  test_prolog_reader.py  test_read_att_transducer.py  test_sfst_and_log_openfst_streams.py  test_streams_1.py  test_streams_2.py  test_streams_3.py  test_streams_all_1.py  test_streams_all_2.py  test_tokenizer.py  test_twolc.py  test_xerox_rules.py  test_xre.py  wheel_smoke_test.py
wasm-libs/: Makefile.am
(+350 files in other folders)
