[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "hfst_flammie"
version = "0.0.1"
authors = [
  { name="Flammie A Pirinen", email="flammie@iki.fi" },
]
description = "HFST python bindings (test)"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hfst/hfst"
"Bug Tracker" = "https://github.com/hfst/hfst/issues"
